# conoha-dns

./: Makefile  README.md  eyes4you.org.csv  go.mod  pyproject.toml
.github/: dependabot.yml
.github/workflows/: dependabot-auto-merge.yml  workflow.yml
cmd/conoha-dns/: main.go
internal/conoha/: cli.go  cli_test.go  client.go  id.go  manager.go  types.go
scripts/: chaos_test_records.py
src/conoha_dns_cli/: client.py  domain.py  id_converter.py  main.py  record.py  utils.py
