[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conoha-dns-cli"
version = "0.1.0"
description = "A CLI tool to manage ConoHa DNS."
readme = "README.md"
requires-python = ">=3.8"
authors = [
  {name = "haturatu", email = "taro@eyes4you.org"},
]
license = {text = "BSD-3-Clause"}

dependencies = [
  "python-dotenv",
  "requests",
]

[project.scripts]
conoha-dns = "conoha_dns_cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["conoha_dns_cli"]
